logs/dag_id=toronto_real_estate_etl/run_id=manual__2023-08-01T11:16:42.810577+00:00/task_id=StagetoFinal/attempt=1.log
[2023-08-01T11:29:06.195+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: toronto_real_estate_etl.StagetoFinal manual__2023-08-01T11:16:42.810577+00:00 [queued]>
[2023-08-01T11:29:06.202+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: toronto_real_estate_etl.StagetoFinal manual__2023-08-01T11:16:42.810577+00:00 [queued]>
[2023-08-01T11:29:06.203+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 1
[2023-08-01T11:29:06.213+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): StagetoFinal> on 2023-08-01 11:16:42.810577+00:00
[2023-08-01T11:29:06.217+0000] {standard_task_runner.py:57} INFO - Started process 761 to run task
[2023-08-01T11:29:06.220+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'toronto_real_estate_etl', 'StagetoFinal', 'manual__2023-08-01T11:16:42.810577+00:00', '--job-id', '80', '--raw', '--subdir', 'DAGS_FOLDER/etl.py', '--cfg-path', '/tmp/tmpl6onm0vf']
[2023-08-01T11:29:06.221+0000] {standard_task_runner.py:85} INFO - Job 80: Subtask StagetoFinal
[2023-08-01T11:29:06.254+0000] {task_command.py:410} INFO - Running <TaskInstance: toronto_real_estate_etl.StagetoFinal manual__2023-08-01T11:16:42.810577+00:00 [running]> on host e5187b3c4256
[2023-08-01T11:29:06.317+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='toronto_real_estate_etl' AIRFLOW_CTX_TASK_ID='StagetoFinal' AIRFLOW_CTX_EXECUTION_DATE='2023-08-01T11:16:42.810577+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-08-01T11:16:42.810577+00:00'
[2023-08-01T11:29:10.492+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/src/main.py", line 103, in insertIntoFinalRedshiftTable
    insertIntoFinal()
  File "/opt/airflow/dags/src/Load.py", line 161, in insertIntoFinal
    cur.execute(delete_from_table)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 1: ...dress and "HousePrices".DatePosted = stage_table.DatePosted;
                                                                      ^

[2023-08-01T11:29:10.499+0000] {taskinstance.py:1350} INFO - Marking task as FAILED. dag_id=toronto_real_estate_etl, task_id=StagetoFinal, execution_date=20230801T111642, start_date=20230801T112906, end_date=20230801T112910
[2023-08-01T11:29:10.508+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 80 for task StagetoFinal (syntax error at or near ";"
LINE 1: ...dress and "HousePrices".DatePosted = stage_table.DatePosted;
                                                                      ^
; 761)
[2023-08-01T11:29:10.542+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-08-01T11:29:10.555+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
